--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,9 @@ body{
     font-family: sans-serif;
     font-size: 18px;
 }
+
+header{
+    height: 400px;
+    background-image: url(../imgs/511.jpg);
+    background-size: cover;
+}
